@@ -1,5 +1,6 @@
 0.28_dev
 -update jpanel with event handling that registers appropriate mouse position.
+-add time.set_timer method.
 
 0.27    2015-04-12
 -update font to enhance fonts access.
